Babieslist/Navigation added

--- a/www/BabiesList.html
+++ b/www/BabiesList.html
@@ -37,7 +37,7 @@
                     </div>
                     <!--Media List View-->
 
-                    <div class="content-block-title">Mail App</div>
+                    <div class="content-block-title">List of Babies</div>
                     <div class="list-block media-list">
                         <ul>
                             <li>
@@ -45,7 +45,7 @@
                                     <div class="item-inner">
                                         <div class="item-title-row">
                                             <div class="item-title">Baby </div>
-                                            <div class="item-after" id="write"></div>
+                                            <div class="item-after" id="write">15:14</div>
 
                                         </div>
                                         <!--<div class="item-subtitle">New messages from John Doe</div>-->
