--- a/www/Baby 1.html
+++ b/www/Baby 1.html
@@ -46,12 +46,12 @@
                                 <a href="#" class="item-link item-content">
                                     <div class="item-inner">
                                         <div class="item-title-row">
-                                            <div class="item-title">Baby </div>
+                                            <div class="item-title">Baby 1</div>
                                             <div class="item-after" id="write">15:14</div>
 
                                         </div>
                                         <!--<div class="item-subtitle">New messages from John Doe</div>-->
-                                        <div class="item-text">Lorem ipsum dolor sit amet...</div>
+                                        <div class="item-text">Bed.No, Mother Name, Child.No & Time</div>
                                     </div>
                                 </a>
                             </li>
