--- a/www/BPhase2.html
+++ b/www/BPhase2.html
@@ -29,7 +29,7 @@
                                 <span>Back</span>
                             </a>
                         </div>
-                        <div class="center" style="margin: 0 auto;">ECEB - Baby1</div>
+                        <div class="center" style="margin: 0 auto;">ECEB - BabyPhase2</div>
                         <div class="right">
                             <a href="#" class="link">Log off</a>
                         </div>
@@ -146,7 +146,7 @@
                         </ul>
                     </div>
                     <div>
-                        <a class="button button-fill" id="BabyPhase2-Button" href="#">Next</a>
+                        <a class="button button-fill confirm-title-ok-cancel" id="BabyPhase2-Button" href="#">Next</a>
                     </div>
                 </div>
             </div>
