--- a/www/BabiesList.html
+++ b/www/BabiesList.html
@@ -41,7 +41,7 @@
                     <div class="list-block media-list">
                         <ul>
                             <li>
-                                <a href="Baby 1.html" class="item-link item-content">
+                                <a href="Baby 1.html" class="item-link item-content confirm-ok-cancel">
                                     <div class="item-inner">
                                         <div class="item-title-row">
                                             <div class="item-title">Baby </div>
