--- a/www/BPhase2.html
+++ b/www/BPhase2.html
@@ -24,7 +24,7 @@
                 <div class="navbar">
                     <div class="navbar-inner">
                         <div class="left">
-                            <a href="Baby 1.html" class="link">
+                            <a href="BPhase1.html" class="link">
                                 <i class="icon icon-back"></i>
                                 <span>Back</span>
                             </a>
