--- a/www/BabiesList.html
+++ b/www/BabiesList.html
@@ -16,6 +16,16 @@
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="css/my-app.css">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script>
+	$(document).ready(function(){
+		if(window.localStorage.getItem('babieslist')!= null){
+		var list = JSON.parse(window.localStorage.getItem('babieslist'));
+		for(i=0;i<list.length;i++){
+			$("#list ul").append('<li><a class="item-link item-content confirm-ok-cancel"> <div class="item-inner"><div class="item-title-row"><div class="item-title">Baby'+(i+1)+'</div><div class="item-after" id="write">'+'</div></div><div class="item-text">Mother Name:'+list[i].mother_name+', Child.No'+list[i].bed_no+'</div></div></a></li>');
+		}
+		}
+	});
+	</script>
 </head>
 <body>
 <div class="views">
@@ -39,21 +49,9 @@
                     <!--Media List View-->
 
                     <div class="content-block-title">List of Babies</div>
-                    <div class="list-block media-list">
+                    <div class="list-block media-list" id="list">
                         <ul>
-                            <li>
-                                <a class="item-link item-content confirm-ok-cancel">
-                                    <div class="item-inner">
-                                        <div class="item-title-row">
-                                            <div class="item-title">Baby </div>
-                                            <div class="item-after" id="write">15:14</div>
-
-                                        </div>
-                                        <!--<div class="item-subtitle">New messages from John Doe</div>-->
-                                        <div class="item-text">Bed.No, Mother Name, Child.No & Time</div>
-                                    </div>
-                                </a>
-                            </li>
+                            
                         </ul>
                     </div>
                 </div>
