--- a/www/BPhase1.html
+++ b/www/BPhase1.html
@@ -5,8 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
-
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
@@ -15,6 +13,15 @@
     <link rel="stylesheet" href="css/framework7.material.colors.min.css">
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="css/my-app.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script>
+	$(document).ready(function(){
+		var list = JSON.parse(window.localStorage.getItem("babieslist"));
+		var item = window.localStorage.getItem("cookie");
+		alert(list);
+		$("#name").append('Baby of '+list[item].mother_name);
+	});
+	</script>
 </head>
 <body>
 <div class="views">
@@ -24,7 +31,7 @@
                 <div class="navbar">
                     <div class="navbar-inner">
                         <div class="left">
-                            <a href="Baby1.html" class="link">
+                            <a href="BabiesList.html" class="link">
                                 <i class="icon icon-back"></i>
                                 <span>Back</span>
                             </a>
@@ -47,34 +54,12 @@
                                 <a href="#" class="item-link item-content">
                                     <div class="item-inner">
                                         <div class="item-title-row">
-                                            <div class="item-title">Baby 1</div>
+                                            <div class="item-title" id="name"> </div>
                                             <div class="item-after" id="write">13:30 (Minutes after birth)</div>
                                         </div>
                                     </div>
                                 </a>
                             </li>
-                            <!--&lt;!&ndash; Text inputs &ndash;&gt;-->
-                            <!--<li>-->
-                                <!--<div class="item-content">-->
-                                    <!--<div class="item-inner">-->
-                                        <!--<div class="item-title label">Baby No.</div>-->
-                                        <!--<div class="item-input">-->
-                                            <!--<input type="text" placeholder="BabyNo">-->
-                                        <!--</div>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</li>-->
-                            <!--<li>-->
-                                <!--<div class="item-content">-->
-                                    <!--<div class="item-inner">-->
-                                        <!--<div class="item-title label">Minutes after birth</div>-->
-                                        <!--<div class="item-input">-->
-                                            <!--<input type="email" placeholder="Minutes">-->
-                                        <!--</div>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</li>-->
-                            <!-- Single chekbox item -->
                             <li>
                                 <label class="label-radio item-content">
                                     <input type="radio" name="my-radio" value="Skin-to-skin">
@@ -124,7 +109,5 @@
 <script type="text/javascript" src="js/framework7.min.js"></script>
 <!-- Path to your app js-->
 <script type="text/javascript" src="js/my-app.js"></script>
-<script type="text/javascript" src="cordova.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
