Timer function in js page

--- a/www/AddBaby.html
+++ b/www/AddBaby.html
@@ -103,7 +103,7 @@
                                     </li>
                                 </ul>
                                 <div>
-                                    <a class="button button-fill" id="Createbaby-Button" onClick="addBaby()" href="BabiesList.html">Add Baby</a>
+                                    <a class="button button-fill" id="Createbaby-Button" onClick="addBaby();babyTimer();" href="BabiesList.html">Add Baby</a>
                                 </div>
                             </div>
                         </form>
