--- a/www/BPhase1.html
+++ b/www/BPhase1.html
@@ -55,7 +55,7 @@
                                     <div class="item-inner">
                                         <div class="item-title-row">
                                             <div class="item-title" id="name"> </div>
-                                            <div class="item-after" id="write">13:30 (Minutes after birth)</div>
+                                            <div class="item-after" id="write">Hello <span id="time"></span></span></div>
                                         </div>
                                     </div>
                                 </a>
